--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,22 @@ body{
     margin: 0;
     padding: 0;
 }
+
+#cabecera{
+   background-color: blue; 
+   color: white;
+   box-shadow: 0px 2px 30px 0px rgba(0,0,0,0.75);
+   font-weight: bold;;
+   margin: 0px;
+   padding: 0.5em;
+}
+
+#cabecera #tagline{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container
 {
     width: 70%;
