--- a/css/estilos.css
+++ b/css/estilos.css
@@ -34,3 +34,11 @@ body{
 {
     font-size: 20px;
 }
+
+#footer
+{
+    background: #7777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+}
